login.jsp and login.css uploaded

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>cat201</groupId>
+            <artifactId>cat201-project</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
